--- a/bowl_pool/test/2017-2018/rankings.html
+++ b/bowl_pool/test/2017-2018/rankings.html
@@ -364,80 +364,80 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2017-12-30 21:10:41</em></div>
-<div class="line"><em>Last bowl scored:  Orange Bowl (Wisconsin vs. Miami)</em></div>
+<div class="line"><em>Last updated:  2017-12-30 22:32:55</em></div>
+<div class="line"><em>Last bowl scored:  Outback Bowl (Michigan vs. South Carolina)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. The Water and The Well 29.25</div>
-<div class="line">2. UrbranLegend 28.5</div>
-<div class="line">3. <strong>Bumblerooski 28.25</strong></div>
-<div class="line">4. Trojans 27.5</div>
-<div class="line">5. Clutch City 27.0</div>
-<div class="line">6. Cowboy 26.75</div>
-<div class="line">6. The Pick Doctor 26.75</div>
-<div class="line">8. Bobbo 26.5</div>
-<div class="line">9. Bevo's Best 26.25</div>
-<div class="line">10. cutie pie 25.75</div>
-<div class="line">10. Jake and the Neverland Pirates 25.75</div>
-<div class="line">12. beach lady 25.5</div>
-<div class="line">12. Juul 25.5</div>
-<div class="line">14. Godiva Nine! 24.25</div>
-<div class="line">14. Superman 24.25</div>
-<div class="line">16. 4 Rackets 24.0</div>
-<div class="line">16. Make Bowl Season Great Again 24.0</div>
-<div class="line">16. MidWestWheat 24.0</div>
-<div class="line">16. War Eagle 24.0</div>
-<div class="line">16. Yoda 24.0</div>
-<div class="line">21. <strong>Eclipse 23.75</strong></div>
-<div class="line">21. I lost the password to my first bracket 23.75</div>
-<div class="line">21. Still a Beaver Believer 23.75</div>
-<div class="line">24. Luck be a lady 23.25</div>
-<div class="line">25. OSUX3 23.0</div>
-<div class="line">25. Putin's Dog 23.0</div>
-<div class="line">25. <strong>Thunder 23.0</strong></div>
-<div class="line">25. Tucker 23.0</div>
-<div class="line">29. Winning Jeff 22.75</div>
-<div class="line">30. Lucky in 2018 22.5</div>
-<div class="line">30. Santa Cruz Bill 22.5</div>
-<div class="line">32. <strong>#MamaBear 22.25</strong></div>
-<div class="line">32. Rapacke's Bracket 22.25</div>
-<div class="line">32. Texas Big Red 22.25</div>
-<div class="line">35. Brothers before others 22.0</div>
-<div class="line">35. Pepper Bear 22.0</div>
-<div class="line">35. Sorbet 22.0</div>
-<div class="line">38. Santa's Helper 21.75</div>
-<div class="line">38. <strong>Static 21.75</strong></div>
-<div class="line">40. Katyusha 21.25</div>
-<div class="line">40. Kevin's bracket 21.25</div>
-<div class="line">40. <strong>Nerf Herder 21.25</strong></div>
-<div class="line">40. Victorious Secret 21.25</div>
-<div class="line">44. Assistant Coach Riley? 21.0</div>
-<div class="line">44. Pooh Bear 21.0</div>
-<div class="line">46. Blindhog2017 20.75</div>
-<div class="line">46. War Beaver 20.75</div>
-<div class="line">48. Bay City Rollers 20.5</div>
-<div class="line">48. Go For Broke 20.5</div>
-<div class="line">48. Josh's Bracket 20.5</div>
-<div class="line">51. <strong>GlamKam 20.25</strong></div>
-<div class="line">52. Adrian A 20.0</div>
-<div class="line">53. Coog Crew 19.75</div>
-<div class="line">53. Go For Bones 19.75</div>
-<div class="line">53. Maui Girl 19.75</div>
-<div class="line">56. Batman 19.5</div>
-<div class="line">56. Blind Dog's Bluff 19.5</div>
-<div class="line">56. Escalante 19.5</div>
-<div class="line">56. <strong>Lightning 19.5</strong></div>
-<div class="line">60. The Striker 19.25</div>
-<div class="line">61. Duke Rules 19.0</div>
-<div class="line">62. Julez 18.75</div>
-<div class="line">63. Swampdonkey 18.25</div>
-<div class="line">64. YOLO Pups 18.0</div>
-<div class="line">65. Sgt. Pepper 17.75</div>
-<div class="line">66. Nurse Ratched 17.0</div>
-<div class="line">67. Warren Mooned Me 16.75</div>
-<div class="line">68. <strong>D-Bo 16.25</strong></div>
-<div class="line">69. hapagirl 16.0</div>
-<div class="line">70. <strong>Em214 15.5</strong></div>
+<div class="line">1. The Water and The Well 31.25</div>
+<div class="line">2. <strong>Bumblerooski 30.25</strong></div>
+<div class="line">3. Clutch City 29.0</div>
+<div class="line">4. Cowboy 28.75</div>
+<div class="line">4. The Pick Doctor 28.75</div>
+<div class="line">6. Bobbo 28.5</div>
+<div class="line">6. UrbranLegend 28.5</div>
+<div class="line">8. Bevo's Best 28.25</div>
+<div class="line">9. cutie pie 27.75</div>
+<div class="line">9. Jake and the Neverland Pirates 27.75</div>
+<div class="line">11. Juul 27.5</div>
+<div class="line">11. Trojans 27.5</div>
+<div class="line">13. Godiva Nine! 26.25</div>
+<div class="line">13. Superman 26.25</div>
+<div class="line">15. 4 Rackets 26.0</div>
+<div class="line">15. Make Bowl Season Great Again 26.0</div>
+<div class="line">15. War Eagle 26.0</div>
+<div class="line">18. <strong>Eclipse 25.75</strong></div>
+<div class="line">18. I lost the password to my first bracket 25.75</div>
+<div class="line">20. beach lady 25.5</div>
+<div class="line">21. Putin's Dog 25.0</div>
+<div class="line">21. <strong>Thunder 25.0</strong></div>
+<div class="line">21. Tucker 25.0</div>
+<div class="line">24. Santa Cruz Bill 24.5</div>
+<div class="line">25. <strong>#MamaBear 24.25</strong></div>
+<div class="line">25. Rapacke's Bracket 24.25</div>
+<div class="line">25. Texas Big Red 24.25</div>
+<div class="line">25. Victorious Secret 24.25</div>
+<div class="line">29. MidWestWheat 24.0</div>
+<div class="line">29. Pepper Bear 24.0</div>
+<div class="line">29. Sorbet 24.0</div>
+<div class="line">29. Yoda 24.0</div>
+<div class="line">33. <strong>Static 23.75</strong></div>
+<div class="line">33. Still a Beaver Believer 23.75</div>
+<div class="line">35. Katyusha 23.25</div>
+<div class="line">35. Kevin's bracket 23.25</div>
+<div class="line">35. Luck be a lady 23.25</div>
+<div class="line">35. <strong>Nerf Herder 23.25</strong></div>
+<div class="line">39. Assistant Coach Riley? 23.0</div>
+<div class="line">39. OSUX3 23.0</div>
+<div class="line">41. Winning Jeff 22.75</div>
+<div class="line">42. Bay City Rollers 22.5</div>
+<div class="line">42. Go For Broke 22.5</div>
+<div class="line">42. Josh's Bracket 22.5</div>
+<div class="line">42. Lucky in 2018 22.5</div>
+<div class="line">46. <strong>GlamKam 22.25</strong></div>
+<div class="line">47. Adrian A 22.0</div>
+<div class="line">47. Brothers before others 22.0</div>
+<div class="line">49. Coog Crew 21.75</div>
+<div class="line">49. Go For Bones 21.75</div>
+<div class="line">49. Maui Girl 21.75</div>
+<div class="line">49. Santa's Helper 21.75</div>
+<div class="line">53. Batman 21.5</div>
+<div class="line">53. Blind Dog's Bluff 21.5</div>
+<div class="line">53. Escalante 21.5</div>
+<div class="line">56. The Striker 21.25</div>
+<div class="line">57. Pooh Bear 21.0</div>
+<div class="line">58. Blindhog2017 20.75</div>
+<div class="line">58. War Beaver 20.75</div>
+<div class="line">60. Swampdonkey 20.25</div>
+<div class="line">61. YOLO Pups 20.0</div>
+<div class="line">62. Sgt. Pepper 19.75</div>
+<div class="line">63. <strong>Lightning 19.5</strong></div>
+<div class="line">64. Duke Rules 19.0</div>
+<div class="line">64. Nurse Ratched 19.0</div>
+<div class="line">66. Julez 18.75</div>
+<div class="line">67. <strong>D-Bo 18.25</strong></div>
+<div class="line">68. hapagirl 18.0</div>
+<div class="line">69. <strong>Em214 17.5</strong></div>
+<div class="line">70. Warren Mooned Me 16.75</div>
 <div class="line">71. West Coast Bias 15.25</div>
 </div>
 </div>
