--- a/bowl_pool/test/2017-2018/results.html
+++ b/bowl_pool/test/2017-2018/results.html
@@ -2909,6 +2909,83 @@ ul.auto-toc {
 <td>0.0</td>
 <td>2.0</td>
 </tr>
+<tr><td>32</td>
+<td>Orange Bowl</td>
+<td>Wisconsin</td>
+<td>Miami</td>
+<td>6.5</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+</tr>
 <tr><td>39</td>
 <td>Liberty Bowl</td>
 <td>Memphis</td>
@@ -2991,77 +3068,77 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>22.25</strong></td>
-<td><strong>24.0</strong></td>
-<td><strong>20.0</strong></td>
-<td><strong>21.0</strong></td>
-<td><strong>19.5</strong></td>
-<td><strong>20.5</strong></td>
-<td><strong>25.5</strong></td>
-<td><strong>26.25</strong></td>
-<td><strong>19.5</strong></td>
-<td><strong>20.75</strong></td>
-<td><strong>26.5</strong></td>
-<td><strong>22.0</strong></td>
-<td><strong>28.25</strong></td>
-<td><strong>27.0</strong></td>
-<td><strong>19.75</strong></td>
-<td><strong>26.75</strong></td>
-<td><strong>25.75</strong></td>
-<td><strong>16.25</strong></td>
-<td><strong>19.0</strong></td>
-<td><strong>23.75</strong></td>
-<td><strong>15.5</strong></td>
-<td><strong>19.5</strong></td>
-<td><strong>20.25</strong></td>
-<td><strong>19.75</strong></td>
-<td><strong>20.5</strong></td>
 <td><strong>24.25</strong></td>
-<td><strong>16.0</strong></td>
-<td><strong>23.75</strong></td>
-<td><strong>25.75</strong></td>
-<td><strong>20.5</strong></td>
-<td><strong>18.75</strong></td>
+<td><strong>26.0</strong></td>
+<td><strong>22.0</strong></td>
+<td><strong>23.0</strong></td>
+<td><strong>21.5</strong></td>
+<td><strong>22.5</strong></td>
 <td><strong>25.5</strong></td>
-<td><strong>21.25</strong></td>
-<td><strong>21.25</strong></td>
+<td><strong>28.25</strong></td>
+<td><strong>21.5</strong></td>
+<td><strong>20.75</strong></td>
+<td><strong>28.5</strong></td>
+<td><strong>22.0</strong></td>
+<td><strong>30.25</strong></td>
+<td><strong>29.0</strong></td>
+<td><strong>21.75</strong></td>
+<td><strong>28.75</strong></td>
+<td><strong>27.75</strong></td>
+<td><strong>18.25</strong></td>
+<td><strong>19.0</strong></td>
+<td><strong>25.75</strong></td>
+<td><strong>17.5</strong></td>
+<td><strong>21.5</strong></td>
+<td><strong>22.25</strong></td>
+<td><strong>21.75</strong></td>
+<td><strong>22.5</strong></td>
+<td><strong>26.25</strong></td>
+<td><strong>18.0</strong></td>
+<td><strong>25.75</strong></td>
+<td><strong>27.75</strong></td>
+<td><strong>22.5</strong></td>
+<td><strong>18.75</strong></td>
+<td><strong>27.5</strong></td>
+<td><strong>23.25</strong></td>
+<td><strong>23.25</strong></td>
 <td><strong>19.5</strong></td>
 <td><strong>23.25</strong></td>
 <td><strong>22.5</strong></td>
+<td><strong>26.0</strong></td>
+<td><strong>21.75</strong></td>
 <td><strong>24.0</strong></td>
+<td><strong>19.0</strong></td>
+<td><strong>23.0</strong></td>
+<td><strong>24.0</strong></td>
+<td><strong>21.0</strong></td>
+<td><strong>25.0</strong></td>
+<td><strong>24.25</strong></td>
+<td><strong>23.25</strong></td>
+<td><strong>24.5</strong></td>
+<td><strong>21.75</strong></td>
 <td><strong>19.75</strong></td>
 <td><strong>24.0</strong></td>
-<td><strong>17.0</strong></td>
-<td><strong>23.0</strong></td>
-<td><strong>22.0</strong></td>
-<td><strong>21.0</strong></td>
-<td><strong>23.0</strong></td>
-<td><strong>22.25</strong></td>
-<td><strong>21.25</strong></td>
-<td><strong>22.5</strong></td>
-<td><strong>21.75</strong></td>
-<td><strong>17.75</strong></td>
-<td><strong>22.0</strong></td>
-<td><strong>21.75</strong></td>
 <td><strong>23.75</strong></td>
+<td><strong>23.75</strong></td>
+<td><strong>26.25</strong></td>
+<td><strong>20.25</strong></td>
 <td><strong>24.25</strong></td>
-<td><strong>18.25</strong></td>
-<td><strong>22.25</strong></td>
-<td><strong>26.75</strong></td>
-<td><strong>19.25</strong></td>
-<td><strong>29.25</strong></td>
-<td><strong>23.0</strong></td>
-<td><strong>27.5</strong></td>
-<td><strong>23.0</strong></td>
-<td><strong>28.5</strong></td>
+<td><strong>28.75</strong></td>
 <td><strong>21.25</strong></td>
+<td><strong>31.25</strong></td>
+<td><strong>25.0</strong></td>
+<td><strong>27.5</strong></td>
+<td><strong>25.0</strong></td>
+<td><strong>28.5</strong></td>
+<td><strong>24.25</strong></td>
 <td><strong>20.75</strong></td>
-<td><strong>24.0</strong></td>
+<td><strong>26.0</strong></td>
 <td><strong>16.75</strong></td>
 <td><strong>15.25</strong></td>
 <td><strong>22.75</strong></td>
 <td><strong>24.0</strong></td>
-<td><strong>18.0</strong></td>
+<td><strong>20.0</strong></td>
 </tr>
 </tbody>
 </table>
