--- a/bowl_pool/2023-2024/results.html
+++ b/bowl_pool/2023-2024/results.html
@@ -1572,6 +1572,34 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>B1</td>
+<td>Who will win the National Championship?</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+</tr>
 <tr><td>B2</td>
 <td>Will more than 62 total points be scored in the Sugar Bowl (Texas vs. Washington)?</td>
 <td>&nbsp;</td>
@@ -1691,12 +1719,12 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td><strong>36.0</strong></td>
 <td><strong>28.75</strong></td>
-<td><strong>29.25</strong></td>
-<td><strong>44.75</strong></td>
+<td><strong>31.25</strong></td>
+<td><strong>46.75</strong></td>
 <td><strong>30.25</strong></td>
 <td><strong>27.75</strong></td>
 <td><strong>38.0</strong></td>
-<td><strong>32.5</strong></td>
+<td><strong>34.5</strong></td>
 <td><strong>22.0</strong></td>
 <td><strong>36.75</strong></td>
 <td><strong>32.5</strong></td>
@@ -1706,10 +1734,10 @@ ul.auto-toc {
 <td><strong>29.75</strong></td>
 <td><strong>31.5</strong></td>
 <td><strong>29.5</strong></td>
-<td><strong>36.75</strong></td>
+<td><strong>38.75</strong></td>
 <td><strong>41.25</strong></td>
 <td><strong>30.25</strong></td>
-<td><strong>38.25</strong></td>
+<td><strong>40.25</strong></td>
 <td><strong>29.25</strong></td>
 </tr>
 </tbody>
