--- a/bowl_pool/test/2025-2026/rankings.html
+++ b/bowl_pool/test/2025-2026/rankings.html
@@ -365,19 +365,37 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2025-12-22 18:02:15</em></div>
-<div class="line"><em>Last bowl scored:  FAMOUS IDAHO POTATO BOWL (Utah State vs. Washington State)</em></div>
+<div class="line"><em>Last updated:  2025-12-24 13:38:16</em></div>
+<div class="line"><em>Last bowl scored:  SCOOTER'S COFFEE FRISCO BOWL (UNLV vs. Ohio (Bobcats))</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Vibe-free since '73 10.75</strong></div>
-<div class="line">1. <strong>Sherrone Moore's Bad Day 10.75</strong></div>
-<div class="line">3. <strong>Barkside Ballers 9.75</strong></div>
-<div class="line">4. Dazed and Confoosballed 9.25</div>
-<div class="line">5. bugaroo 7.0</div>
-<div class="line">6. Sierra LeCat Dowdle 6.75</div>
-<div class="line">7. Sascha Picks Dogs 5.75</div>
-<div class="line">8. Momma Longhorn 5.25</div>
-<div class="line">9. The New Mendoza Line 2.0</div>
+<div class="line">1. <strong>Bearly Watching 15.25</strong></div>
+<div class="line">2. <strong>Vibe-free since '73 14.75</strong></div>
+<div class="line">3. <strong>Sherrone Moore's Bad Day 14.25</strong></div>
+<div class="line">3. We Pay Players 14.25</div>
+<div class="line">5. Battered Austin Syndrome 13.5</div>
+<div class="line">6. Mama Dawg 12.75</div>
+<div class="line">7. Down 12.5</div>
+<div class="line">8. Barkside Ballers 12.25</div>
+<div class="line">8. Dazed and Confoosballed 12.25</div>
+<div class="line">8. Eclipse 12.25</div>
+<div class="line">8. First Round SIL 12.25</div>
+<div class="line">12. #MamaBear 12.0</div>
+<div class="line">13. Wisconsin shoud've been here 10.75</div>
+<div class="line">14. Just Call Me Dr. 10.5</div>
+<div class="line">15. Sierra LeCat Dowdle 10.25</div>
+<div class="line">15. Upside 10.25</div>
+<div class="line">17. bugaroo 10.0</div>
+<div class="line">18. BlueOrRed 9.5</div>
+<div class="line">19. Sascha Picks Dogs 9.25</div>
+<div class="line">19. NoNND-Bo 2 9.25</div>
+<div class="line">19. Not So New Guy 9.25</div>
+<div class="line">22. Momma Longhorn 8.25</div>
+<div class="line">22. Call Me An Optimist 8.25</div>
+<div class="line">24. Game of Throws 8.0</div>
+<div class="line">25. NoNND-Bo 1 7.25</div>
+<div class="line">26. Arandas legacy Year 7.0</div>
+<div class="line">27. The New Mendoza Line 4.0</div>
 </div>
 </div>
 </body>
